RbA Build/src/objects/Journal_Entry__c.object
<CustomObject>
    <description>Holds the Financial Transactions that are sent to an Accounting System.
Baan ERP, etc.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Baan_Business_Partner_Number__c</fullName>
        <label>Baan Business Partner Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Adjustment</label>
        <referenceTo>Business_Adjustment__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_General_Ledger_Account__c</fullName>
        <label>Credit General Ledger Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <description>set up in Baan?</description>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_BaanERP__c</fullName>
        <label>Date Sent to BaanERP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Debit_General_Ledger_Account__c</fullName>
        <label>Debit General Ledger Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Labor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Labor</label>
        <referenceTo>Labor__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Refund</label>
        <referenceTo>Refund__c</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_to_BaanERP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to BaanERP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Journal Entries</relationshipLabel>
        <relationshipName>Journal_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Trans_Ref__c</fullName>
        <label>Trans Ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Cash Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service External Labor - JIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service External Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Recognized Service External Labor - JIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Recognized Service External Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Recognized External Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Recognized Internal Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc Reimbursement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - External Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - Service External Labor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - Service External Labor - JIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - Refund Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - COGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - Service AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - Finance Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - Service Tax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Recognized - Install Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund - Deposit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund - Final Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Product Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Inventory Received - Intercompany Consolidation Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Inventory Received - External Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Inventory Received - Remake External Vendor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Journal Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JEN-{000000}</displayFormat>
        <label>Journal Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LockedServiceRequest</fullName>
        <active>false</active>
        <description>DEPRECATED LEAVE INACTIVE</description>
        <errorConditionFormula>AND((Order__r.Lock_Service_Request__c), CreatedDate != NOW())</errorConditionFormula>
        <errorMessage>DEPRECATED LEAVE INACTIVE</errorMessage>
    </validationRules>
</CustomObject>